--- a/ProjectManagementSystem/Views/Shared/_CheckPartialView.cshtml
+++ b/ProjectManagementSystem/Views/Shared/_CheckPartialView.cshtml
@@ -8,7 +8,7 @@
         <div class="accordion-item" id="missionaccordion-item">
             <h2 class="accordion-header" id="headingOne">
                 <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                    任务审核
+                    待审核(@(Model.MissionChecks.Count() + Model.DefectChecks.Count() + Model.RiskChecks.Count()))
                 </button>
             </h2>
             <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
@@ -18,6 +18,7 @@
                             <tr>
                                 <th scope="col">id</th>
                                 <th scope="col">名称</th>
+                                <th scope="col">类型</th>
                                 <th scope="col">状态</th>
                                 <th scope="col">操作</th>
                             </tr>
@@ -33,6 +34,7 @@
                                 <tr>
                                     <th>@missionCheck.Id</th>
                                     <td>@missionCheck.Name</td>
+                                    <td>@missionCheck.CheckType</td>
                                     <td>
                                         <label class="@co">@missionCheck.Status</label>
                                     </td>
@@ -49,30 +51,6 @@
                                     </td>
                                 </tr>
                             }
-
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </div>
-        <div class="accordion-item" id="defectaccordion-item">
-            <h2 class="accordion-header" id="headingTwo">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                    缺陷审核
-                </button>
-            </h2>
-            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
-                <div class="accordion-body">
-                    <table class="table">
-                        <thead>
-                            <tr>
-                                <th scope="col">id</th>
-                                <th scope="col">名称</th>
-                                <th scope="col">状态</th>
-                                <th scope="col">操作</th>
-                            </tr>
-                        </thead>
-                        <tbody>
                             @foreach (var defectCheck in Model.DefectChecks)
                             {
                                 var co = "btn btn-success";
@@ -85,6 +63,7 @@
                                 <tr>
                                     <th>@defectCheck.Id</th>
                                     <td>@defectCheck.Name</td>
+                                    <td>@defectCheck.CheckType</td>
                                     <td>
                                         <label class="@co">@defectCheck.Status</label>
                                     </td>
@@ -101,30 +80,6 @@
                                     </td>
                                 </tr>
                             }
-
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </div>
-        <div class="accordion-item" id="riskaccordion-item">
-            <h2 class="accordion-header" id="headingThree">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                    风险审核
-                </button>
-            </h2>
-            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
-                <div class="accordion-body">
-                    <table class="table">
-                        <thead>
-                            <tr>
-                                <th scope="col">id</th>
-                                <th scope="col">名称</th>
-                                <th scope="col">状态</th>
-                                <th scope="col">操作</th>
-                            </tr>
-                        </thead>
-                        <tbody>
                             @foreach (var riskCheck in Model.RiskChecks)
                             {
                                 var co = "btn btn-success";
@@ -137,6 +92,7 @@
                                 <tr>
                                     <th>@riskCheck.Id</th>
                                     <td>@riskCheck.Name</td>
+                                    <td>@riskCheck.CheckType</td>
                                     <td>
                                         <label class="@co">@riskCheck.Status</label>
                                     </td>
@@ -153,7 +109,115 @@
                                     </td>
                                 </tr>
                             }
-
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+        <div class="accordion-item" id="defectaccordion-item">
+            <h2 class="accordion-header" id="headingTwo">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                    已审核(@(Model.UnMissionChecks.Count() + Model.UnDefectChecks.Count() + Model.UnRiskChecks.Count()))
+                </button>
+            </h2>
+            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th scope="col">id</th>
+                                <th scope="col">名称</th>
+                                <th scope="col">类型</th>
+                                <th scope="col">状态</th>
+                                <th scope="col">操作</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (var missionCheck in Model.UnMissionChecks)
+                            {
+                                var co = "btn btn-success";
+                                if (missionCheck.Status == CheckStatus.未审核)
+                                    co = "btn btn-info";
+                                if (missionCheck.Status == CheckStatus.再次审核)
+                                    co = "btn btn-secondary";
+                                <tr>
+                                    <th>@missionCheck.Id</th>
+                                    <td>@missionCheck.Name</td>
+                                    <td>@missionCheck.CheckType</td>
+                                    <td>
+                                        <label class="@co">@missionCheck.Status</label>
+                                    </td>
+                                    <td>
+                                        <a asp-action="CheckMission" asp-controller="Check" asp-route-id="@missionCheck.Id" class="btn btn-outline-primary">详情</a>
+                                        @if (missionCheck.Status != CheckStatus.审核通过)
+                                        {
+                                            <a asp-action="PassMission" asp-controller="Check" asp-route-id="@missionCheck.Id" class="btn btn-outline-success">通过</a>
+                                        }
+                                        @if (missionCheck.Status != CheckStatus.审核未通过)
+                                        {
+                                            <a asp-action="UnPassMission" asp-controller="Check" asp-route-id="@missionCheck.Id" class="btn btn-outline-danger">未通过</a>
+                                        }
+                                    </td>
+                                </tr>
+                            }
+                            @foreach (var defectCheck in Model.UnDefectChecks)
+                            {
+                                var co = "btn btn-success";
+                                if (defectCheck.Status == CheckStatus.未审核)
+                                    co = "btn btn-info";
+                                if (defectCheck.Status == CheckStatus.再次审核)
+                                    co = "btn btn-secondary";
+                                if (defectCheck.Status == CheckStatus.审核未通过)
+                                    co = "btn btn-danger";
+                                <tr>
+                                    <th>@defectCheck.Id</th>
+                                    <td>@defectCheck.Name</td>
+                                    <td>@defectCheck.CheckType</td>
+                                    <td>
+                                        <label class="@co">@defectCheck.Status</label>
+                                    </td>
+                                    <td>
+                                        <a asp-action="CheckDefect" asp-controller="Check" asp-route-id="@defectCheck.Id" class="btn btn-outline-primary">详情</a>
+                                        @if (defectCheck.Status != CheckStatus.审核通过)
+                                        {
+                                            <a asp-action="PassDefect" asp-controller="Check" asp-route-id="@defectCheck.Id" class="btn btn-outline-success">通过</a>
+                                        }
+                                        @if (defectCheck.Status != CheckStatus.审核未通过)
+                                        {
+                                            <a asp-action="UnPassDefect" asp-controller="Check" asp-route-id="@defectCheck.Id" class="btn btn-outline-danger">未通过</a>
+                                        }
+                                    </td>
+                                </tr>
+                            }
+                            @foreach (var riskCheck in Model.UnRiskChecks)
+                            {
+                                var co = "btn btn-success";
+                                if (riskCheck.Status == CheckStatus.未审核)
+                                    co = "btn btn-info";
+                                if (riskCheck.Status == CheckStatus.再次审核)
+                                    co = "btn btn-secondary";
+                                if (riskCheck.Status == CheckStatus.审核未通过)
+                                    co = "btn btn-danger";
+                                <tr>
+                                    <th>@riskCheck.Id</th>
+                                    <td>@riskCheck.Name</td>
+                                    <td>@riskCheck.CheckType</td>
+                                    <td>
+                                        <label class="@co">@riskCheck.Status</label>
+                                    </td>
+                                    <td>
+                                        <a asp-action="CheckRisk" asp-controller="Check" asp-route-id="@riskCheck.Id" class="btn btn-outline-primary">详情</a>
+                                        @if (riskCheck.Status != CheckStatus.审核通过)
+                                        {
+                                            <a asp-action="PassRisk" asp-controller="Check" asp-route-id="@riskCheck.Id" class="btn btn-outline-success">通过</a>
+                                        }
+                                        @if (riskCheck.Status != CheckStatus.审核未通过)
+                                        {
+                                            <a asp-action="UnPassRisk" asp-controller="Check" asp-route-id="@riskCheck.Id" class="btn btn-outline-danger">未通过</a>
+                                        }
+                                    </td>
+                                </tr>
+                            }
                         </tbody>
                     </table>
                 </div>
@@ -161,3 +225,7 @@
         </div>
     </div><!-- End Default Accordion Example -->
 </div>
+
+
+
+
