--- a/ProjectManagementSystem/Views/Shared/_DefectPartialView.cshtml
+++ b/ProjectManagementSystem/Views/Shared/_DefectPartialView.cshtml
@@ -48,7 +48,7 @@
                                     </td>
                                     <td class="custom-td">
                                         <label class="@st">@defect.Status</label>
-                                    <td class="custom-td"><a asp-action="EditDefect" asp-controller="Defect" asp-route-Id="@defect.Id">编辑</a></td>
+                                    <td class="custom-td"><a asp-action="EditDefect" class="btn btn-primary" asp-controller="Defect" asp-route-Id="@defect.Id">编辑</a></td>
                                 </tr>
                             </tbody>
                         </table>
