--- a/ProjectManagementSystem/Views/Shared/_UserPartialView.cshtml
+++ b/ProjectManagementSystem/Views/Shared/_UserPartialView.cshtml
@@ -123,3 +123,14 @@
         </div>
     </div>
 </div>
+<script>
+    $(document).ready(function () {
+        $('#searchuser').on('keyup', function () {
+            var value = $(this).val().toLowerCase();
+            $('table tbody tr').filter(function () {
+                $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
+            });
+        });
+    });
+
+</script>
