--- a/ProjectManagementSystem/Views/Shared/_BookPartialView.cshtml
+++ b/ProjectManagementSystem/Views/Shared/_BookPartialView.cshtml
@@ -13,13 +13,13 @@
     {
         <div class="col">
             <div class="card h-100">
-                <img src="@book.CoverImage" style="width: 100%; height: 200px;" class="card-img-top" alt="...">
+                <h5 class="card-title text-center">@book.Name</h5>
                 <div class="card-body">
-                    <h5 class="card-title text-center">@book.Name</h5>
                     <p class="card-text">@book.Summary</p>
                 </div>
                 <div class="card-footer text-center">
                     <a asp-action="EditBook" asp-controller="Book" asp-route-id="@book.Id" class="btn btn-primary">查看</a>
+                    <a asp-action="DownloadBook" asp-controller="Book" asp-route-fileName="@book.FileName" class="btn btn-success">下载</a>
                     <a asp-action="DeleteBook" asp-controller="Book" asp-route-id="@book.Id" class="btn btn-danger">删除</a>
                 </div>
             </div>
