--- a/ProjectManagementSystem/Views/Shared/_Layout.cshtml
+++ b/ProjectManagementSystem/Views/Shared/_Layout.cshtml
@@ -14,7 +14,43 @@
     <title>@ViewData["Title"] - ProjectManagementSystem</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
+    <style>
+        .info-card {
+            padding-bottom: 10px;
+        }
 
+            .info-card h6 {
+                font-size: 28px;
+                color: #012970;
+                font-weight: 700;
+                margin: 0;
+                padding: 0;
+            }
+
+        .card-icon {
+            font-size: 32px;
+            line-height: 0;
+            width: 64px;
+            height: 64px;
+            flex-shrink: 0;
+            flex-grow: 0;
+        }
+
+        .sales-card .card-icon {
+            color: #4154f1;
+            background: #f6f6fe;
+        }
+
+        .revenue-card .card-icon {
+            color: #2eca6a;
+            background: #e0f8e9;
+        }
+
+        .customers-card .card-icon {
+            color: #ff771d;
+            background: #ffecdf;
+        }
+    </style>
     <style>
         .readonly-input {
             background-color: #e9ecef;
