--- a/ProjectManagementSystem/Views/Shared/_LookPartialView.cshtml
+++ b/ProjectManagementSystem/Views/Shared/_LookPartialView.cshtml
@@ -3,6 +3,65 @@
 @using ProjectManagementSystem.ViewModels
 @model LookIndexViewModel
 <div class="container">
+    <div class="col-12">
+        <div class="row">
+            <!-- Sales Card -->
+            <div class="col-xxl-4 col-md-6">
+                <div class="card info-card sales-card">
+                    <div class="card-body">
+                        <h5 class="card-title">任务</h5>
+                        <div class="d-flex align-items-center">
+                            <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
+                                <i class="bi bi-card-checklist"></i>
+                            </div>
+                            <div class="ps-3">
+                                <h6>145</h6>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div><!-- End Sales Card -->
+            <!-- Revenue Card -->
+            <div class="col-xxl-4 col-md-6">
+                <div class="card info-card revenue-card">
+                    <div class="card-body">
+                        <h5 class="card-title">资金</h5>
+
+                        <div class="d-flex align-items-center">
+                            <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
+                                <i class="bi bi-currency-yen"></i>
+                            </div>
+                            <div class="ps-3">
+                                <h6>￥3,264</h6>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div><!-- End Revenue Card -->
+            <!-- Customers Card -->
+            <div class="col-xxl-4 col-xl-12">
+
+                <div class="card info-card customers-card">
+                    <div class="card-body">
+                        <h5 class="card-title">成员</h5>
+
+                        <div class="d-flex align-items-center">
+                            <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
+                                <i class="bi bi-people"></i>
+                            </div>
+                            <div class="ps-3">
+                                <h6>1244</h6>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+            </div><!-- End Customers Card -->
+        </div>
+    </div>
     <!-- Reports -->
     <div class="col-12">
         <div class="card">
